crates/rome_js_formatter/tests/specs/prettier/js/reserved-word/interfaces.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: interfaces.js

---
# Input
```js
foo.interface;
interface.foo;
new interface();
({ interface: "foo" });
(interface, "foo");
void interface;
const interface = "foo";

```

# Output
```js
foo.interface;
interface.foo;
new interface();
({ interface: "foo" });
(interface, "foo");
void interface;
const interface = "foo";

```

# Errors
```
error[SyntaxError]: Illegal use of reserved keyword `interface` as an identifier in strict mode
  ┌─ interfaces.js:2:1
  │
2 │ interface.foo;
  │ ^^^^^^^^^

error[SyntaxError]: Illegal use of reserved keyword `interface` as an identifier in strict mode
  ┌─ interfaces.js:3:5
  │
3 │ new interface();
  │     ^^^^^^^^^

error[SyntaxError]: Illegal use of reserved keyword `interface` as an identifier in strict mode
  ┌─ interfaces.js:5:2
  │
5 │ (interface, "foo");
  │  ^^^^^^^^^

error[SyntaxError]: Illegal use of reserved keyword `interface` as an identifier in strict mode
  ┌─ interfaces.js:6:6
  │
6 │ void interface;
  │      ^^^^^^^^^

error[SyntaxError]: Illegal use of reserved keyword `interface` as an identifier in strict mode
  ┌─ interfaces.js:7:7
  │
7 │ const interface = "foo";
  │       ^^^^^^^^^


```


